--- a/sauce.html
+++ b/sauce.html
@@ -232,7 +232,7 @@
       /* Position pesto image at top */
       #section1 .food-image.left-image {
         position: absolute;
-        top: 60px;
+        top: 50px;
         left: 50%;
         transform: translateX(-50%);
         width: 90%;
@@ -256,7 +256,7 @@
       /* Position RS image below text */
        #section1 .food-image.right-image {
         position: absolute;
-        top: calc(8vh + 270px); /* Added 50px to original 220px */
+        top: calc(vh + 270px); /* Added 50px to original 220px */
         left: 50%;
         transform: translateX(-50%);
         width: 90%;
@@ -274,7 +274,7 @@
       /* [Previous small phone styles remain the same until RS image] */
       
       #section1 .food-image.right-image {
-        top: calc(20vh + 250px); /* Added 50px to original 200px */
+        top: calc(0vh + 250px); /* Added 50px to original 200px */
         max-height: 60vh;
       }
       
