--- a/sauce.html
+++ b/sauce.html
@@ -40,6 +40,7 @@
 
     /* Image Layout */
    /* Animation Styles */
+/* Animation Styles */
 .food-image {
   height: 70vh;
   width: auto;
@@ -49,12 +50,12 @@
 }
 
 .left-image {
-  transform: translateX(-100vw); /* Start off-screen left */
+  transform: translateX(-100px); /* Start slightly left */
   opacity: 0;
 }
 
 .right-image {
-  transform: translateX(100vw); /* Start off-screen right */
+  transform: translateX(100px); /* Start slightly right */
   opacity: 0;
 }
 
@@ -67,7 +68,7 @@
 }
 
 .slide-in {
-  transform: translateX(0) !important; /* Slide to normal position */
+  transform: translateX(0) !important; /* Slide to center */
   opacity: 1 !important;
 }
 
