--- a/sauce.html
+++ b/sauce.html
@@ -289,11 +289,11 @@
       }
       
       h1 {
-        font-size: 2.2rem;
+        font-size: 2.rem;
       }
       
       h2 {
-        font-size: 2.2rem;
+        font-size: 2.rem;
       }
     }
 
