--- a/sauce.html
+++ b/sauce.html
@@ -261,7 +261,7 @@
         top: calc(20vh + 80px);
         left: 50%;
         transform: translateX(-50%);
-        width: 50%;
+        width: 65%;
         padding: 0;
         margin: 0;
       }
@@ -321,7 +321,7 @@
       }
       
       h2 {
-        font-size: .5rem;
+        font-size: 0.5rem;
       }
     }
   </style>
