--- a/sauce.html
+++ b/sauce.html
@@ -320,7 +320,7 @@
         font-size: 3rem;
       }
       
-      h2 {
+      h7 {
         font-size: 0.5rem;
       }
     }
@@ -346,7 +346,7 @@
       <img src="images2/pesto2.png" alt="Pesto Sauce" class="food-image left-image">
       <div class="recipe-content">
         <h1>Sauces</h1>
-        <p>Discover our collection of flavorful sauces, from classic recipes to modern creations that will elevate any dish.</p>
+        <h7>Discover our collection of flavorful sauces, from classic recipes to modern creations that will elevate any dish.</h7>
       </div>
       <img src="images2/RS.png" alt="Red Sauce" class="food-image right-image">
     </div>
