--- a/sauce.html
+++ b/sauce.html
@@ -346,7 +346,7 @@
       <img src="images2/pesto2.png" alt="Pesto Sauce" class="food-image left-image">
       <div class="recipe-content">
         <h1>Sauces</h1>
-        <h7>Discover our collection of flavorful sauces, from classic recipes to modern creations that will elevate any dish.</h7>
+        <h7>Two of my favorite sauces are Pesto and Marinara. Both are my fathers recipies and are staples in our house.</h7>
       </div>
       <img src="images2/RS.png" alt="Red Sauce" class="food-image right-image">
     </div>
