--- a/pizza.html
+++ b/pizza.html
@@ -236,9 +236,10 @@
 
     @media (max-width: 480px) {
       h1 {
-        font-size: 2rem;
+        font-size: 2.5rem;
       }
-      
+      h6 { font-size: .75rem
+      }
       .food-image {
         max-height: 60vh; /* Even larger on very small screens */
       }
@@ -265,7 +266,7 @@
       <img src="images2/pizza.png" alt="Delicious Pizza" class="food-image">
       <div class="recipe-content">
         <h1>Pizza</h1>
-        <p>Experience our authentic pizza made with the finest ingredients and traditional techniques.</p>
+        <h6>Experience our authentic pizza made with the finest ingredients and traditional techniques.</h6>
       </div>
     </div>
   </div>
@@ -335,3 +336,4 @@
   </script>
 </body>
 </html>
+
