--- a/pizza.html
+++ b/pizza.html
@@ -66,6 +66,7 @@
     .recipe-content {
       flex: 0 1 600px;
       text-align: center;
+      width: 80%;
       padding: 0 40px;
       opacity: 0; /* Start invisible */
       transition: opacity 1s ease 0.5s; /* Delay the text fade */
