--- a/pizza.html
+++ b/pizza.html
@@ -268,7 +268,7 @@
       <img src="images2/pizza.png" alt="Delicious Pizza" class="food-image">
       <div class="recipe-content">
         <h1>Pizza</h1>
-        <h6>Experience our authentic pizza made with the finest ingredients and traditional techniques.</h6>
+        <h6>This recipe was created through about a month of making pizza's everyday, and finding what worked best.</h6>
       </div>
     </div>
   </div>
