--- a/pizza.html
+++ b/pizza.html
@@ -241,6 +241,7 @@
         font-size: 2.5rem;
       }
       h6 { font-size: .75rem
+           line-height: 1.8;
       }
       .food-image {
         max-height: 60vh; /* Even larger on very small screens */
