--- a/pizza.html
+++ b/pizza.html
@@ -240,7 +240,7 @@
       h1 {
         font-size: 2.5rem;
       }
-      h6 { font-size: .75rem
+      h6 { font-size: .75rem;
            line-height: 1.8;
       }
       .food-image {
