--- a/sauce.html
+++ b/sauce.html
@@ -60,11 +60,13 @@
     #section1 .left-image {
       transform: translateX(-100px);
       opacity: 0;
+       width: 90%;
     }
 
     #section1 .right-image {
       transform: translateX(100px);
       opacity: 0;
+       width: 90%;
     }
 
     #section1 .recipe-content {
