--- a/sauce.html
+++ b/sauce.html
@@ -47,7 +47,13 @@
       max-width: 1400px;
       margin: 0 auto;
     }
+    
+#section1 .food-image.left-image {
 
+
+  width:80%;}
+
+    
     /* Animation Styles - Only for Section 1 */
     #section1 .food-image {
       height: 60vh;
