--- a/sauce.html
+++ b/sauce.html
@@ -51,8 +51,11 @@
 #section1 .food-image.left-image {
 
 
-  width:80%;}
+  width:60%;}
+#section1 .food-image.right-image {
 
+
+  width:60%;}
     
     /* Animation Styles - Only for Section 1 */
     #section1 .food-image {
