--- a/sauce.html
+++ b/sauce.html
@@ -39,44 +39,52 @@
     }
 
     /* First Section Layout */
-    #section1 .image-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 80%;
-      max-width: 1600px;
-      margin: 0 auto;
-    }
-    
-#section1 .food-image.left-image {
+ /* First Section Layout - UPDATED */
+#section1 .image-container {
+  display: flex;
+  justify-content: center; /* Changed from space-between */
+  align-items: center;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+  gap: 40px; /* Added gap control */
+}
 
+#section1 .food-image {
+  height: 60vh;
+  width: auto;
+  max-width: 30%; /* Reduced from 40% */
+  object-fit: contain;
+  transition: transform 1s ease-out, opacity 1s ease;
+  flex-shrink: 0; /* Prevents image squishing */
+}
 
-  width:60%;}
-#section1 .food-image.right-image {
+#section1 .left-image {
+  transform: translateX(-200px); /* Reduced from -480px */
+  opacity: 0;
+}
 
+#section1 .right-image {
+  transform: translateX(200px); /* Reduced from 480px */
+  opacity: 0;
+}
 
-  width:60%;}
-    
-    /* Animation Styles - Only for Section 1 */
-    #section1 .food-image {
-      height: 60vh;
-      width: auto;
-      max-width: 40%;
-      object-fit: contain;
-      transition: transform 1s ease-out, opacity 1s ease;
-    }
+#section1 .recipe-content {
+  flex: 0 1 500px; /* Reduced from 600px */
+  text-align: center;
+  padding: 0 40px; /* Reduced from 120px */
+  opacity: 0;
+  transition: opacity 1s ease 0.5s;
+  order: 2; /* Ensures text stays in middle */
+}
 
-    #section1 .left-image {
-      transform: translateX(-480px);
-      opacity: 0;
-       width: 50%;
-    }
+#section1 .left-image {
+  order: 1; /* Left image first */
+}
 
-    #section1 .right-image {
-      transform: translateX(480px);
-      opacity: 0;
-       width: 50%;
-    }
+#section1 .right-image {
+  order: 3; /* Right image last */
+}
 
     #section1 .recipe-content {
       flex: 0 1 600px;
