--- a/sauce.html
+++ b/sauce.html
@@ -329,6 +329,7 @@
       #section1 .food-image.right-image {
         top: calc(30vh + 150px);
         max-height: 45vh;
+        width: 150%;
       }
       
       #section2, #section3 {
