--- a/pizza.html
+++ b/pizza.html
@@ -82,11 +82,14 @@
       margin-bottom: 1.5rem;
     }
     
-    h6 {
+  h6 {
       font-size: 1rem;
-         line-height: 1.8;
-   
-      margin-bottom: 1.5rem;
+  font-weight: 40; /* Normal weight */
+  font-family: 'Georgia', serif; /* Match your body font */
+  color: #5c4d3c; /* Match your text color */
+  line-height: 1.5;
+  margin: 0.5rem 0 1.5rem;
+  font-style: italic; /* Optional: if you want the italic style */
     }
     
     p {
