--- a/entrees.html
+++ b/entrees.html
@@ -86,7 +86,16 @@
       font-size: 3.5rem;
       margin-bottom: 1.5rem;
     }
-    
+
+    h6 {
+      font-size: 1rem;
+  font-weight: 40; /* Normal weight */
+  font-family: 'Georgia', serif; /* Match your body font */
+  color: #5c4d3c; /* Match your text color */
+  line-height: 1.5;
+  margin: 0.5rem 0 1.5rem;
+  font-style: italic; /* Optional: if you want the italic style */
+    }
     h2 {
       font-size: 2.5rem;
       margin-bottom: 1.5rem;
@@ -225,7 +234,7 @@
     </div>
     <div class="recipe-content">
       <h1>Entrees</h1>
-      <p>Discover our rotating selection of delicious entree options.</p>
+      <h6>Discover our rotating selection of delicious entree options.</h6>
     </div>
   </div>
 
