--- a/meat.html
+++ b/meat.html
@@ -76,6 +76,15 @@
       font-size: 3.5rem;
       margin-bottom: 1.5rem;
     }
+    h6 {
+      font-size: 1rem;
+  font-weight: 40; /* Normal weight */
+  font-family: 'Georgia', serif; /* Match your body font */
+  color: #5c4d3c; /* Match your text color */
+  line-height: 1.5;
+  margin: 0.5rem 0 1.5rem;
+  font-style: italic; /* Optional: if you want the italic style */
+    }
     
     h2 {
       font-size: 2.5rem;
@@ -216,7 +225,7 @@
            onerror="console.error('Failed to load MB.png')">
       <div class="recipe-content">
         <h1>Meat Recipes</h1>
-        <p>Discover our collection of hearty meat dishes, featuring classic recipes with modern twists that will satisfy any carnivorous craving.</p>
+        <h6>Discover our collection of hearty meat dishes, featuring classic recipes with modern twists that will satisfy any carnivorous craving.</h6>
       </div>
       <img src="images2/c.png" alt="Cutlet Recipe" class="food-image right-image">
     </div>
