--- a/entrees.html
+++ b/entrees.html
@@ -243,7 +243,7 @@
     </div>
     <div class="recipe-content">
       <h1>Entrees</h1>
-      <h6>Discover our rotating selection of delicious entree options.</h6>
+      <h6>Here are some of my go to meals mixing all of the meats, and sauces that I have made. </h6>
     </div>
   </div>
 
