--- a/entrees.html
+++ b/entrees.html
@@ -205,7 +205,11 @@
       h1 {
         font-size: 1.8rem;
       }
-      
+      .recipe-content {
+ 
+      top:30px;
+     
+    }
       .slideshow-container {
         height: 40vh;
       }
