--- a/meat.html
+++ b/meat.html
@@ -24,7 +24,11 @@
       padding: 20px;
       box-sizing: border-box;
     }
-    
+    #section1 {
+  background-color: #f0e6d2;
+  position: sticky;
+  top: 0;
+}
     #section1 {
       background-color: #f0e6d2;
     }
@@ -224,7 +228,11 @@
       h1 {
         font-size: 1.8rem;
       }
-      
+      #section1 {
+  background-color: #f0e6d2;
+  position: sticky;
+  top: 0;
+}
       .food-image {
         max-height: 25vh;
         /* More pronounced slide on small phones */
