--- a/pizza.html
+++ b/pizza.html
@@ -37,7 +37,11 @@
     #section3 {
       background-color: #e0d9c1;
     }
-
+#section1 {
+  background-color: #f0e6d2;
+  position: sticky;
+  top: 0;
+}
     /* Image Layout */
     .image-container {
       display: flex;
@@ -218,7 +222,11 @@
         flex-direction: column;
         gap: 30px;
       }
-      
+      #section1 {
+  background-color: #f0e6d2;
+  position: sticky;
+  top: 0;
+}
       .food-image {
         height: auto;
         max-height: 50vh; /* Larger than before */
@@ -244,6 +252,11 @@
       h1 {
         font-size: 2.5rem;
       }
+      #section1 {
+  background-color: #f0e6d2;
+  position: sticky;
+  top: 0;
+}
       h6 { font-size: .75rem;
            line-height: 1.8;
       }
