--- a/meat.html
+++ b/meat.html
@@ -235,6 +235,7 @@
 }
       .food-image {
         max-height: 20vh;
+        top:-20px;
         /* More pronounced slide on small phones */
         transform: translateY(150px);
       }
