--- a/meat.html
+++ b/meat.html
@@ -242,6 +242,7 @@
       
       .left-image {
         transform: translateY(130px) translateX(-30px);
+        top:-15%;
       }
       
       .right-image {
