--- a/meat.html
+++ b/meat.html
@@ -277,7 +277,7 @@
       <img src="images2/MB.png" alt="Meatball Recipe" class="food-image left-image" 
            onerror="console.error('Failed to load MB.png')">
       <div class="recipe-content">
-        <h1>Meat Recipes</h1>
+        <h1>Met Recipes</h1>
         <h6>Discover our collection of hearty meat dishes, featuring classic recipes with modern twists that will satisfy any carnivorous craving.</h6>
       </div>
       <img src="images2/c.png" alt="Cutlet Recipe" class="food-image right-image">
