--- a/meat.html
+++ b/meat.html
@@ -232,12 +232,14 @@
 
   /* Move left image up */
   #section1 .left-image {
+    max-height: 20vh;
     top: 5%; /* Was -15%, now moved up */
     transform: translateY(115px) translateX(-30px); /* Reduced from 130px */
   }
 
   /* Move right image up */
   #section1 .right-image {
+    max-height: 20vh;
     top: calc(30vh + 170px); /* Reduced from 185px */
     transform: translateY(115px) translateX(60px); /* Reduced from 130px */
   }
