--- a/meat.html
+++ b/meat.html
@@ -173,30 +173,29 @@
       display: block;
     }
 
-  
- @media (max-width: 480px) {
-  /* Adjust sticky header position */
+@media (max-width: 480px) {
+  /* Move the entire section container up */
   #section1 {
-    top: -30px; /* Moves entire section up */
+    top: -15px; /* Adjusts sticky positioning */
   }
 
-  /* Move left image up */
+  /* Move left image up without changing size */
   #section1 .left-image {
-    max-height: 20vh;
-    top: 5%; /* Was -15%, now moved up */
-    transform: translateY(115px) translateX(-30px); /* Reduced from 130px */
+    top: 35px; /* Was 50px, now 35px (15px up) */
+    max-height: 20vh; /* Keep original size */
+    transform: translateY(115px) translateX(-30px); /* Adjusted from 130px */
   }
 
-  /* Move right image up */
+  /* Move right image up without changing size */
   #section1 .right-image {
-    max-height: 20vh;
-    top: calc(30vh + 170px); /* Reduced from 185px */
-    transform: translateY(115px) translateX(60px); /* Reduced from 130px */
+    top: calc(30vh + 170px); /* Was 185px, now 170px (15px up) */
+    max-height: 25vh; /* Keep original size */
+    transform: translateY(115px) translateX(60px); /* Adjusted from 130px */
   }
 
-  /* Move text content up */
+  /* Move text up */
   #section1 .recipe-content {
-    top: calc(25vh + 5px); /* Reduced from 20px */
+    top: calc(25vh + 5px); /* Was 20px, now 5px (15px up) */
   }
 }
   </style>
