--- a/sauce.html
+++ b/sauce.html
@@ -124,12 +124,12 @@
     
     h6 {
       font-size: 1rem;
-  font-weight: 40; /* Normal weight */
-  font-family: 'Georgia', serif; /* Match your body font */
-  color: #5c4d3c; /* Match your text color */
-  line-height: 1.5;
-  margin: 0.5rem 0 1.5rem;
-  font-style: italic; /* Optional: if you want the italic style */
+      font-weight: 400;
+      font-family: 'Georgia', serif;
+      color: #5c4d3c;
+      line-height: 1.5;
+      margin: 0.5rem 0 1.5rem;
+      font-style: italic;
     }
     
     .pesto-header {
