--- a/meat.html
+++ b/meat.html
@@ -308,7 +308,7 @@
       background-color: #e0d9c1;
     }
       #section1 .left-image {
-        top: -10px;
+         top: calc(0vh + 5px);
         max-height: 20vh;
         transform: translateY(100px) translateX(-30px);
       }
