--- a/meat.html
+++ b/meat.html
@@ -287,47 +287,53 @@
       }
     }
 
-   @media (max-width: 480px) {
+  @media (max-width: 480px) {
+  /* Section 1 adjustments */
   #section1 {
-    height: 100vh; /* Keep at 100vh */
+    height: 100vh;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start; /* Align to top */
-    padding-top: 20px; /* Add some top padding */
+    justify-content: flex-start; /* Align content to top */
+    padding-top: 10vh; /* Adjust this value to move whole stack up/down */
   }
 
+  /* Image container layout */
   .image-container {
     flex-direction: column;
-    height: 100%;
-    position: relative;
+    gap: 20px;
+    margin-top: 0; /* Remove any default margins */
   }
 
-  /* Adjust image positioning */
+  /* Image sizing */
   .food-image {
-    position: relative !important; /* Override absolute */
-    top: auto !important;
-    left: auto !important;
-    transform: none !important;
-    max-height: 25vh;
-    width: 80%;
-    margin: 10px auto;
+    max-height: 20vh;
+    width: auto;
+    max-width: 70%;
+    margin: 0 auto;
   }
 
-  /* Specific adjustments */
+  /* Specific image positions */
   .left-image {
-    transform: translateY(0) translateX(-30px) !important;
+    transform: translateY(0) translateX(-30px);
+    order: 1; /* First in column */
   }
 
   .right-image {
-    transform: translateY(0) translateX(30px) !important;
-    margin-top: 20px;
+    transform: translateY(0) translateX(30px);
+    order: 3; /* Last in column */
   }
 
+  /* Text content positioning */
   .recipe-content {
-    top: auto;
-    margin-top: 20px;
-    order: -1; /* Move text above images */
+    order: 2; /* Middle in column */
+    padding: 0 20px;
+    margin: 10px 0;
   }
+
+  /* Animation adjustments */
+  .slide-in {
+    transform: translateX(0) !important;
+  }
+}
   </style>
 </head>
 <body>
