--- a/meat.html
+++ b/meat.html
@@ -313,6 +313,7 @@
 
   /* Specific image positions */
   .left-image {
+    top: -30px;
     transform: translateY(0) translateX(-30px);
     order: 1; /* First in column */
   }
