--- a/meat.html
+++ b/meat.html
@@ -327,7 +327,9 @@
     padding: 0 20px;
     margin: 10px 0;
   }
-
+ #section2 {
+    height: 160vh;
+ }
   /* Animation adjustments */
   .slide-in {
     transform: translateX(0) !important;
