--- a/meat.html
+++ b/meat.html
@@ -288,7 +288,7 @@
   @media (max-width: 480px) {
   /* Section 1 adjustments */
   #section1 {
-    height: 100vh;
+    height: 120vh;
     display: flex;
     justify-content: flex-start; /* Align content to top */
     padding-top: -20vh; /* Adjust this value to move whole stack up/down */
@@ -328,7 +328,10 @@
     margin: 10px 0;
   }
  #section2 {
-    height: 160vh;
+    height: 180vh;
+ }
+    #section3 {
+    height: 170vh;
  }
   /* Animation adjustments */
   .slide-in {
