--- a/pizza.html
+++ b/pizza.html
@@ -324,7 +324,7 @@
         </ul>
       </div>
 
-    <img src="images3/pr.png" alt="Pizza Recipe" class="recipe-image">
+  <img src="./images3/pr.png" alt="Pizza Recipe" class="recipe-image">
       
       <div class="instructions">
         <h3>Instructions</h3>
