--- a/meat.html
+++ b/meat.html
@@ -16,6 +16,7 @@
 
      .recipe-image {
   max-width: 120%;
+       width: 100%;
   height: auto;
   margin: 30px auto;
   display: block;
@@ -25,7 +26,7 @@
 
 @media (max-width: 768px) {
   .recipe-image {
-    max-width: 100%;
+    max-width: 120%;
   }
 }
     /* Section Styles */
