--- a/sauce.html
+++ b/sauce.html
@@ -152,7 +152,9 @@
     .redsauce-header {
       color: #d62c2c;
     }
-    
+     h2 {
+     
+        font-size: 3rem;
     h3 {
       font-size: 1.8rem;
       margin: 2rem 0 1rem;
