--- a/sauce.html
+++ b/sauce.html
@@ -154,7 +154,7 @@
     }
      h2 {
      
-        font-size: 3rem;
+        font-size: 3rem; }
     h3 {
       font-size: 1.8rem;
       margin: 2rem 0 1rem;
