--- a/sauce.html
+++ b/sauce.html
@@ -22,7 +22,10 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
-
+#section2, #section3 {
+  align-items: flex-start; /* Align content to top instead of center */
+  padding-top: 40px; /* Reduce top padding */
+}
 @media (max-width: 768px) {
   .recipe-image {
     max-width: 100%;
