--- a/sauce.html
+++ b/sauce.html
@@ -22,20 +22,10 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
-#section2, #section3 {
-  min-height: auto !important; /* Remove forced 100vh */
-  align-items: flex-start !important; /* Align content to top */
-  padding-top: 40px; /* Adjust top padding */
-  padding-bottom: 60px; /* Keep bottom padding */
-}
+#section2 {
 
-/* Ensure recipe content takes full width */
-#section2 .recipe-content, 
-#section3 .recipe-content {
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-}
+height:120vh;}
+  
 @media (max-width: 768px) {
   .recipe-image {
     max-width: 100%;
