--- a/sauce.html
+++ b/sauce.html
@@ -126,11 +126,12 @@ height:190vh;}
     
     /* Recipe Content for Sections 2 and 3 (no animation) */
   #section2, #section3 {
-  align-items: flex-start; /* Align content to top */
-  padding-top: 40px; /* Reduce top padding */
-  padding-bottom: 60px; /* Keep bottom padding */
-  min-height: auto; /* Let content determine height */
-  height: auto; /* Remove fixed height */
+  align-items: flex-start; /* Align to top */
+  justify-content: flex-start; /* Push content up */
+  padding-top: 40px; /* Reduced from 60px */
+  padding-bottom: 60px;
+  min-height: auto;
+  height: auto;
 }
     
     /* Text Styles */
