--- a/sauce.html
+++ b/sauce.html
@@ -16,7 +16,8 @@
       line-height: 1.6;
     }
     .recipe-image {
-  max-width: 80%;
+  max-width: 600px; /* Match your content width */
+  width: 100%;
   height: auto;
   margin: 30px auto;
   display: block;
@@ -48,7 +49,14 @@ height:190vh;}
   top: 0;
   align-items: center;
 }
-
+#section2 h2,
+#section3 h2 {
+  text-align: center;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px; /* Match your content width */
+}
 #section2, #section3 {
   height: auto;
   min-height: 100vh;
@@ -171,6 +179,7 @@ height:190vh;}
     .pesto-header {
       top:-50px;
       color: #3a7a22;
+      align:center;
     }
     
     .redsauce-header {
