--- a/sauce.html
+++ b/sauce.html
@@ -440,7 +440,7 @@ height:190vh;}
     <div class="image-container">
       <img src="images2/pesto2.png" alt="Pesto Sauce" class="food-image left-image">
       <div class="recipe-content">
-        <h1>Suces</h1>
+        <h1>Sauces</h1>
         <h6>Two of my favorite sauces are Pesto and Marinara. Both are my fathers recipies and are staples in our house.</h6>
       </div>
       <img src="images2/RS.png" alt="Red Sauce" class="food-image right-image">
