--- a/sauce.html
+++ b/sauce.html
@@ -390,7 +390,10 @@ height:190vh;}
       #section1 .recipe-content {
         top: calc(25vh + 20px);
       }
-      
+       h6 {
+        font-size: .75rem;
+      }
+    }
    #section1 .food-image.right-image {
     top: calc(30vh + 185px);
     max-height: none;
