--- a/sauce.html
+++ b/sauce.html
@@ -71,14 +71,26 @@ height:190vh;}
     /* First Section Layout */
  /* First Section Layout - UPDATED */
 /* Fix for Section 1 Layout */
-#section1 .image-container {
+/* First Section Layout - Fixed Version */
+#section1 {
+  height: 100vh;
+  background-color: #f0e6d2;
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+#section1 .image-container {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
-  gap: 40px;
 }
 
 #section1 .food-image {
@@ -86,38 +98,45 @@ height:190vh;}
   width: auto;
   max-width: 30%;
   object-fit: contain;
-  transition: transform 1s ease-out, opacity 1s ease;
   flex-shrink: 0;
 }
 
+/* Left Image (Pesto) */
 #section1 .left-image {
-  transform: translateX(-480px);
+  transform: translateX(-100%);
   opacity: 0;
   order: 1;
+  align-self: center;
 }
 
+/* Right Image (RS) */
 #section1 .right-image {
-  transform: translateX(480px);
+  transform: translateX(100%);
   opacity: 0;
   order: 3;
+  align-self: center;
 }
 
+/* Center Content */
 #section1 .recipe-content {
-  flex: 0 1 500px;
+  flex: 0 0 500px;
   text-align: center;
   padding: 0 40px;
-  opacity: 0;
-  transition: opacity 1s ease 0.5s;
   order: 2;
+  margin: 0 auto;
+  opacity: 0;
 }
 
+/* Animation Classes */
 #section1 .slide-in {
   transform: translateX(0) !important;
   opacity: 1 !important;
+  transition: transform 1s ease-out, opacity 1s ease;
 }
 
 #section1 .text-loaded {
   opacity: 1;
+  transition: opacity 1s ease 0.5s;
 }
     
 #section2, #section3 {
